--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     </head>
     <body>
 
-        <h1>ABC</h1>
+        <h1>Hello App </h1>
+
+        <div id="app">
+
+        </div>
 
         <script src="./app.js"></script>
     </body>
