--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <body>
 
         <h1>Hello App </h1>
+        <a href="/home"> Home</a>
 
         <div id="app">
-
         </div>
 
+        <script src="./home.js"></script>
+        <script src="./about.js"></script>
         <script src="./app.js"></script>
     </body>
 </html>
